err-instr-parser-3ac.txt

parser.c:540:48: error: ‘FALSE’ undeclared (first use in this function)
      if (SReduction_expr(&stack, index + 1) == FALSE) {
                                                ^
parser.c:540:48: note: each undeclared identifier is reported only once for each function it appears in
parser.c: In function ‘_for’:
parser.c:760:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(ILABEL, Label_1, NULL, NULL);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:767:22: error: too few arguments to function ‘ReadNameVar’
     string LastVar = ReadNameVar();
                      ^
In file included from parser.c:17:0:
3ac.h:4:8: note: declared here
 string ReadNameVar(TinstList *list);
        ^
parser.c:768:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(INOT, LastVar, NULL, LastVar);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:768:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(INOT, LastVar, NULL, LastVar);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:774:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(IIFGOTO, LastVar, NULL, Label_2);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:774:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(IIFGOTO, LastVar, NULL, Label_2);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:798:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(IGOTO, NULL, NULL, Label_1);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:800:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(ILABEL, Label_1, NULL, NULL);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: In function ‘term_n’:
parser.c:824:33: warning: passing argument 4 of ‘genInstr’ makes pointer from integer without a cast
    genInstr(IWRITE, NULL, NULL, token);
                                 ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘int’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: In function ‘_cout’:
parser.c:847:35: warning: passing argument 4 of ‘genInstr’ makes pointer from integer without a cast
      genInstr(IWRITE, NULL, NULL, token);
                                   ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘int’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: In function ‘_id_n’:
parser.c:871:32: warning: passing argument 4 of ‘genInstr’ makes pointer from integer without a cast
    genInstr(IREAD, NULL, NULL, token);
                                ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘int’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: In function ‘_cin’:
parser.c:892:30: warning: passing argument 4 of ‘genInstr’ makes pointer from integer without a cast
  genInstr(IREAD, NULL, NULL, token);
                              ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘int’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: In function ‘_if’:
parser.c:922:22: error: too few arguments to function ‘ReadNameVar’
     string LastVar = ReadNameVar(); // funkce na cteni nazvu posledni instrukce
                      ^
In file included from parser.c:17:0:
3ac.h:4:8: note: declared here
 string ReadNameVar(TinstList *list);
        ^
parser.c:923:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(INOT, LastVar, NULL, LastVar); // negace podminky
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:923:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(INOT, LastVar, NULL, LastVar); // negace podminky
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:931:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(IIFGOTO, LastVar, NULL, Label_1);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:931:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(IIFGOTO, LastVar, NULL, Label_1);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:944:5: error: incompatible type for argument 4 of ‘genInstr’
     genInstr(IGOTO, NULL, NULL, Label_2);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:945:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(ILABEL, Label_1, NULL, NULL); // musime vlozit label za telo IFu
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c:958:5: error: incompatible type for argument 2 of ‘genInstr’
     genInstr(ILABEL, Label_2, NULL, NULL);
     ^
In file included from parser.c:17:0:
3ac.h:2:6: note: expected ‘struct tData *’ but argument is of type ‘string’
 void genInstr(int InstType, tData *src1, tData *src2, tData *dest);
      ^
parser.c: At top level:
parser.c:1158:29: error: unknown type name ‘tListOfInstr’
 int parse(tSymbolTable *ST, tListOfInstr *instrList){
